# softvg-pinn

./: CITATION.cff  MANIFEST.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: debug_smoke_test.yaml  hydrus_three_layer.yaml
configs/field_columns/: column_1.yaml  column_2.yaml  column_3.yaml  column_4.yaml
configs/scenarios/: A2.yaml  A3.yaml  A4.yaml  A5.yaml  A6.yaml  B1.yaml  B2.yaml  B3.yaml  B4.yaml  C1.yaml  C2.yaml  C3.yaml  L1.yaml  L2.yaml  L3.yaml  L4.yaml  L5.yaml  N0.yaml  N1.yaml  N10.yaml  N3.yaml  N5.yaml  P12_depths.yaml  P3_depths.yaml  P4_depths.yaml  P6_depths.yaml  P8_depths.yaml  T1.yaml  T2.yaml  T3.yaml  T4.yaml  T5.yaml  T6.yaml  T7.yaml  T8.yaml
data/: README.md
data/example/: example_small.csv
data/processed/: A1.B2.C2.L3.T1.xlsx  A2.xlsx  A3.xlsx  A4.xlsx  A5.xlsx  A6.xlsx  B1.xlsx  B3.xlsx  B4.xlsx  C1.xlsx  C3.xlsx  L1.xlsx  L2.xlsx  L4.xlsx  L5.xlsx  README.md  T2.xlsx  T3.xlsx  T4.xlsx  T5.xlsx  T6.xlsx  T7.xlsx  T8.xlsx
data/raw/: README.md
docs/: HYDRUS_scenario_settings.md
experiments/: reproduce_all_figures.py  run_ablation.py  run_multiseed.py  run_scenarios.py  run_single.py
figures/: README.md
notebooks/: README.md
results/: README.md
softvg_pinn/: __init__.py  collocation.py  config.py  data.py  metrics.py  model.py  plots.py  soil_params.py  train.py  vg_mualem.py
supplementary/: multiseed_all_parameters.csv  multiseed_all_vg_errors.csv  multiseed_raw_results.csv
tests/: test_data_loading.py  test_import_and_forward.py  test_masks.py  test_vg_mualem.py
