[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softvg-pinn"
version = "0.2.0"
description = "Soft-layer VG-constrained PINN for layered soil hydraulic function estimation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Replace with author names" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "torch>=2.0",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["softvg_pinn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
